This commit includes: 1. Fixes for tables in child pages 2. Formatting issues

--- a/en/gis/e00.md
+++ b/en/gis/e00.md
@@ -17,7 +17,7 @@
 
 # What is an E00 File? #
 
-Files with E00 extension are [ESRI](https://www.esri.com/en-us/home) ArcInfo Interchange files that are proprietary file format of ESRI. The purpose of the format was to exchange datasets in various ESRI formats between users of ESRI's ArcInfo software. The format was developed as ASCII representation and was purely meant for transfer of data. The requirement was at its highest when physical transfer had limits (e..g floppy disks) and such files used to be helpful by breaking and into a sequence of physical files. ESRI software modules exported all the definition and function files to a single large logical file.
+Files with E00 extension are [ESRI](https://www.esri.com/en-us/home) ArcInfo Interchange files that are proprietary file format of ESRI. The purpose of the format was to exchange datasets in various ESRI formats between users of ESRI's ArcInfo software. The format was developed as ASCII representation and was purely meant for transfer of data. The requirement was at its highest when physical transfer had limits (e.g. floppy disks) and such files used to be helpful by breaking and into a sequence of physical files. ESRI software modules exported all the definition and function files to a single large logical file.
 
 E00 served the purpose of transferring such large files, though the same has been replaced with effective tools for conversion and exchange in binary form without requiring conversion to ASCII and back.  E00 files can be It can be fully, partially compressed, or uncompressed ASCII depending upon the EXPORT option used to create it in the ArcInfo toolset.
 
@@ -25,7 +25,7 @@ E00 served the purpose of transferring such large files, though the same has bee
 
 ESRI has not provided file format specifications for the E00 format. Some [unofficial description](http://avce00.maptools.org/docs/v7_e00_cover.html) of the format is available as a result of analysis by the users. The file format is in ASCII format but there there is no comprehensive information available to know the interpretation of the contents to be useful in GIS. In absence of the specifications, all the segments found in E00 files could not be documented till date in complete form.
 
-The E00 file format has been superseded by the ESRI Arc Geodatabase GeoDB data model which is more modern and facilitates interoperability among ArcGIS file formats. E00 data can be viewed in any text editor. However, the same can not be recreated for usage in a GIS system unless it is exported into an ArcInfo or ArcGIS environment. 
+The E00 file format has been superseded by the ESRI Arc Geodatabase GeoDB data model which is more modern and facilitates interoperability among ArcGIS file formats. E00 data can be viewed in any text editor. However, the same can not be recreated for usage in a GIS system unless it is exported into an ArcInfo or ArcGIS environment.
 
 The E00 file format can hold both the tabular information that the native binary format can contain and the table description required to reconstruct the coverage or grid. It enables the E00 file format to support the functionality of these other formats. Creation of the E00 file ensures that the geometry or coordinate data, associated with a grid or coverage, will be fully understood and usable. These files have a .E00 extension, which increments to .E01, .E02, and so on, if the interchange file is composed of several separate files.
 
