Content Revision No. 5

--- a/en/compression/7Z.md
+++ b/en/compression/7Z.md
@@ -6,7 +6,7 @@
   "draft" : "false",
   "toc" : true,
   "title" : "7Z - 7-ZIP Compressed File",
-  "linktitle" : "7Z - 7-ZIP Compressed File",
+  "linktitle" : "7Z",
   "menu" : {
     "docs" : {
       "parent" : "compression"
@@ -15,9 +15,9 @@
   "lastmod" : "2019-11-10"
 }
 
-**7z** is an archiving format for compressing files and folders with a high compression ratio. It is based on Open Source architecture which makes it possible to use any compression and encryption algorithms. The format is now supported by a number of software applications such as [7-ZIP](https://www.7-zip.org/) which is publicly available for download and usage to manipulate .7z files. Files with .7z extension have mime-type application/x-7z-compressed. 
+**7z** is an archiving format for compressing files and folders with a high compression ratio. It is based on Open Source architecture which makes it possible to use any compression and encryption algorithms. The format is now supported by a number of software applications such as [7-ZIP](https://www.7-zip.org/) which is publicly available for download and usage to manipulate .7z files. Files with .7z extension have mime-type application/x-7z-compressed.
 
-Supported Compression Methods
+## Supported Compression Methods ##
 
 7z can support any compression methods due to its open architecture. Below is a list of compression methods currently available and supported by 7z.
 
