Titles update for SEO

--- a/en/compression/7Z.md
+++ b/en/compression/7Z.md
@@ -5,7 +5,7 @@
   },
   "draft" : "false",
   "toc" : true,
-  "title" : "7Z - 7-ZIP Compressed File",
+  "title" : "7Z - 7-ZIP Compressed File Format",
   "description":"Learn about 7Z file format and APIs that can create and open 7Z files.",
   "linktitle" : "7Z",
   "menu" : {
