--- a/en/video/3G2.md
+++ b/en/video/3G2.md
@@ -5,7 +5,7 @@ author:
   display_name: Muhammad Ahmad Chishti
 draft: false
 toc: true
-description: 3G2(3GPP2 file format) is a multimedia container format that is very similar to the 3GP file format. 3G2 files are stored with the .3g2 extension.
+description: Learn about 3G2 file format and APIs that can create and open 3G2 files.
 title: 3G2 File Format
 linktitle: 3G2
 menu:
