--- a/en/3d/3D2.md
+++ b/en/3d/3D2.md
@@ -3,9 +3,10 @@
   "author" : {
     "display_name" : "Kashif Iqbal"
   },
-  "draft" : "true",
+  "draft" : "false",
   "toc" : true,
-  "title" : "3D2",
+  "description":"Learn about 3D2 file format and APIs that can open and create 3D2 files.",
+  "title" : "3D2 - CAD-3D 2.0 File Format",
   "linktitle" : "3D2",
   "menu" : {
     "docs" : {
@@ -15,14 +16,67 @@
   "lastmod" : "2019-09-10"
 }
 
-A file with 3DS extension represents 3D Sudio (DOS) mesh file format used by Autodesk 3D Studio. Autodesk 3D Studio has been in 3D file format market since 1990s and has now evolved to 3D Studio MAX for working with 3D modeling, animation and rendering. A 3DS file contains data for 3D representation of scenes and images and is one of the popular file formats for 3D data import and export. It considers information like camera locations, Mesh data, lighting information, viewport configurations, smoothing group data, bitmap references and attributes to create vertices and polygons for rendering a scene.
+## What is a 3D2 file?
 
-# File Format for Checking Page Title #
+A file with .3D2 extension is a CAD-3D 2.0 file that stores multiple 3D objects and information about these objects. The lightning and colour palettes information used by the 3D objects are all stored in this file. A single file can hold up to 40 objects. 3D2 had been used as an early format for computer animations. 3DS files can be opened with Quick3D application software.
 
-[Edit](https://wiki.fileformat.com/edit/3D/3DS/WebHome?section#1)
+## 3D2 File Format
 
-At its base, 3DS is a binary file format and follows a predefined structure for storing and retrieving of data. The binary file format enables the 3DS file format faster smaller as compared to text-based file formats. Data inside a 3DS file is stored in the form of chunks.
+The 3D2 file format is similar to the older file format and comprises of two parts.
 
-## File Format for Checking Page Meta Description ##
+ 1. A 256-byte header which contains information about the number of objects contained in the file, the light settings and the colour information.
+ 1. A repeating structure of data that defines the 3D objects in the file.
 
-Lets check the meta description.
+3D2 file format resembles to the older file format, but differs in that it doesn't rely on the Fast Floating Point library (LIBF) of Motorola. It considerably reduces the storage requirements by storing each coordinate in a two-byte word instead of a four-byte floating point value.
+
+### 3D2 Header
+
+|Field|Type|Value|
+---|---|---|
+|File ID| WORD | $3D02|
+|Count of Objects in file|WORD|1-40|
+|Light source A on/off indicator|WORD| (0=off, 1=on)|
+|Light source B on/off indicator |WORD| (0=off, 1=on)|
+|Light source C on/off indicator |WORD| (0=off, 1=on)|
+|Light source A brightness |WORD|(0-7)|
+|Light source B brightness |WORD|(0-7)|
+|Light source C brightness |WORD|(0-7)|
+|Ambient light brightness |WORD|(0-7)|
+|Light source A Z position |WORD|(-50 through +50)|
+|Light source B Z position |WORD|(-50 through +50)|
+|Light source C Z position |WORD|(-50 through +50)|
+|Light source A Y position |WORD|(-50 through +50)|
+|Light source B Y position |WORD|(-50 through +50)|
+|Light source C Y position |WORD|(-50 through +50)|
+|Light source A X position |WORD|(-50 through +50)|
+|Light source B X position |WORD|(-50 through +50)|
+|Light source C X position |WORD|(-50 through +50)|
+|Object color palette|16 WORDs |(BIOS format)|
+|Color group base array|16 WORDs| |
+
+### Color Group Base Array
+
+The palette in the 3D2 file must be accompanied by the colour group base array which indicates the index of the first colour in the group to which that colour belongs. The following is an example palette that contains a background colour of black, followed by five reds, five greens and five blues.
+
+|INDEX|COLOR|BASE|
+---|---|---|
+|0|000|  0|
+|1|100|  1|
+|2|200|  1|
+|3|300|  1|
+|4|400|  1|
+|5|500|  1|
+|6|010|  6|
+|7|020|  6|
+|8|030|  6|
+|9|040|  6|
+|10|050|  6|
+|11|001| 11|
+|12|002| 11|
+|13|003| 11|
+|14|004| 11|
+|15|005| 11|
+
+# References
+
+ * [3D2 File Format](http://paulbourke.net/dataformats/3d2/)
