--- a/en/3d/3D2.md
+++ b/en/3d/3D2.md
@@ -77,6 +77,6 @@ The palette in the 3D2 file must be accompanied by the colour group base array w
 |14|004| 11|
 |15|005| 11|
 
-# References
+## References
 
  * [3D2 File Format](http://paulbourke.net/dataformats/3d2/)
