--- a/en/compression/7Z.md
+++ b/en/compression/7Z.md
@@ -16,6 +16,8 @@
   "lastmod" : "2020-09-05"
 }
 
+## What is a 7Z file?
+
 **7z** is an archiving format for compressing files and folders with a high compression ratio. It is based on Open Source architecture which makes it possible to use any compression and encryption algorithms. The format is now supported by a number of software applications such as [7-ZIP](https://www.7-zip.org/) which is publicly available for download and usage to manipulate .7z files. Files with .7z extension have mime-type application/x-7z-compressed.
 
 ## Supported Compression Methods ##
