GIS File Formats Update

--- a/en/gis/e00.md
+++ b/en/gis/e00.md
@@ -5,7 +5,7 @@
   },
   "draft" : "false",
   "toc" : true,
-  "title" : "E00",
+  "title" : "E00 - ArcInfo Interchange File Format",
   "description":"Learn about E00 file format and APIs that can create and open E00 files.",
   "linktitle" : "E00",
   "menu" : {
@@ -16,7 +16,7 @@
   "lastmod" : "2019-09-10"
 }
 
-# What is an E00 File? #
+## What is an E00 File?
 
 Files with E00 extension are [ESRI](https://www.esri.com/en-us/home) ArcInfo Interchange files that are proprietary file format of ESRI. The purpose of the format was to exchange datasets in various ESRI formats between users of ESRI's ArcInfo software. The format was developed as ASCII representation and was purely meant for transfer of data. The requirement was at its highest when physical transfer had limits (e.g. floppy disks) and such files used to be helpful by breaking and into a sequence of physical files. ESRI software modules exported all the definition and function files to a single large logical file.
 
