Added new formats

--- a/en/video/h265.md
+++ b/en/video/h265.md
@@ -51,10 +51,10 @@ The main purpose behind developing H.265 was to enable the use of the coded vide
 
 ITU-T Video Coding Expert Group (VCEG) progressed the formation of the successor to the H.264 in 2004, then in 2007 ISO/IEC Moving Picture Expert Group (MPEG) underway their drive to the same way. In 2010, the MPEG and VCEG teams cooperated on a joint Call for Proposals and formed the Joint Collaborative Team on Video Coding (JCT-VC) to advance the HEVC standard. On January 25, 2013, the technical content of HEVC was completed, and on April 13, 2013, it was officially professed as a standard. According to the development process, different versions of H.265 was established as follows:
 
- *	2013 - The first version of the H.265 codec was released on April 13, 2013
- *	2014 - The second version of the H.265 codec and was released on October 29, 2014
- *	2015 - The third version of the H.265 codec was released on April 29, 2015
- *	2016 - The fourth version of the H.265 codec was released on December 22, 2016
+ *	**2013** - The first version of the H.265 codec was released on April 13, 2013
+ *	**2014** - The second version of the H.265 codec and was released on October 29, 2014
+ *	**2015** - The third version of the H.265 codec was released on April 29, 2015
+ *	**2016** - The fourth version of the H.265 codec was released on December 22, 2016
  
 ## Difference between H.264 and H.265
 
