Added How To sections to Compression Category Articles

--- a/en/compression/7Z.md
+++ b/en/compression/7Z.md
@@ -56,6 +56,16 @@ The 7z file format supports 256-bit AES encryption with the ability to encrypt 
 * Solid compressing
 * Archive headers compressing
 
+## How to open 7Z file?
+
+The contents of 7Z files can be extracted using the following programs.
+
+|Operating System|Programs that can open 7Z files|
+---|---|
+|Windows|Corel WinZip, PeaZip, 7-Zip, WinRAR|
+|Mac| Corel WinZip, The Unarchiver, p7zip|
+|Linux|p7zip, PeaZip|
+
 ## References ##
 
 * [7z Format - By 7-ZIP](https://www.7-zip.org/7z.html)
