--- a/en/compression/7Z.md
+++ b/en/compression/7Z.md
@@ -6,7 +6,7 @@
   "draft" : "false",
   "toc" : true,
   "title" : "7Z - 7-ZIP Compressed File Format",
-  "description":"Learn about 7Z file format and APIs that can create and open 7Z files.",
+  "description":"What is a 7Z file and APIs that can create and open 7Z files.",
   "linktitle" : "7Z",
   "menu" : {
     "docs" : {
@@ -20,7 +20,7 @@
 
 **7z** is an archiving format for compressing files and folders with a high compression ratio. It is based on Open Source architecture which makes it possible to use any compression and encryption algorithms. The format is now supported by a number of software applications such as [7-ZIP](https://www.7-zip.org/) which is publicly available for download and usage to manipulate .7z files. Files with .7z extension have mime-type application/x-7z-compressed.
 
-## Supported Compression Methods ##
+## Supported Compression Methods in 7z ##
 
 7z can support any compression methods due to its open architecture. Below is a list of compression methods currently available and supported by 7z.
 
@@ -32,19 +32,19 @@
 * BZIP2 - Standard BWT algorithm
 * Deflate - Standard LZ77-based algorithm
 
-## File Format Specifications ##
+## 7z File Format Specifications
 
 7z uses binary file format to store the compressed archives. The development and implementation of 7-ZIP archiver published the first appearance of the 7z file format. Its format specifications are accessible as plain text format under the "Docs" sub-directory in code repository of 7-ZIP which is publicly available under the [GNU Lesser General Public License](https://www.gnu.org/copyleft/lesser.html). LZMA is the default compression method used by 7z files.
 
-### File Signature ###
+### File Signature
 
 7z files begin with signature bytes '7' 'z' BC AF 27 1C.
 
-### AES Encryption ###
+### AES Encryption
 
 The 7z file format supports 256-bit AES encryption with the ability to encrypt the filenames of a the archive. The key for encryption is user-defined, based on the SH-256 hash function.
 
-## Salient Features ##
+## Salient Features of 7z
 
 **7z** is the new archive format, providing high compression ratio. The main features of **7z** format include:
 
@@ -56,7 +56,7 @@ The 7z file format supports 256-bit AES encryption with the ability to encrypt 
 * Solid compressing
 * Archive headers compressing
 
-## References ##
+## References
 
 * [7z Format - By 7-ZIP](https://www.7-zip.org/7z.html)
 * [7z - Wikipedia](https://en.wikipedia.org/wiki/7z)
