--- a/en/video/h265.md
+++ b/en/video/h265.md
@@ -20,7 +20,7 @@
 
 ## What is an H265 file?
 
-H.265 is also known as HEVC (High-Efficiency Video Coding) is a successor to H.264. It is the newest video compression standard that is said to double the data compression proportion as compare to H.264 with the same video quality. Video encoded with HEVC will uphold the high visual quality but at smaller file size. It was developed in response to the increasing need for higher compression of moving pictures for different applications such as:
+H.265 is also known as HEVC (High-Efficiency Video Coding) is a successor to H.264. It is the newest video compression standard that is said to double the data compression proportion as compare to H.264 with the same video quality. Video encoded with HEVC will uphold the high visual quality but at a smaller file size. It was developed in response to the increasing need for higher compression of moving pictures for different applications such as:
 
  * Streaming
  * Videoconferencing
@@ -35,7 +35,7 @@ The main purpose behind developing H.265 was to enable the use of the coded vide
  *	High quality and better compression ratio 
  *	Can easily be utilized in high-resolution movies like 2K or 4K.
  *	Having better adaptivity having extra coding modes 
- *	HEVC contains an in-loop deblocking filter, where the blocking items round the transform edges within the rebuilt picture are smoothed to enhance the picture quality and compression proficiency. 
+ *	HEVC contains an in-loop deblocking filter, where the blocking items around the transform edges within the rebuilt picture are smoothed to enhance the picture quality and compression proficiency. 
  *	HEVC introduces a new filtering stage called the sample-adaptive offset (SAO) filter, which can offer both an impartial and development and enhancement in video quality.
  *	Useful in reducing the bandwidth with larger resolutions
  *	Potential to back resolutions of 8192 x 4320 pixels 
