added meta keywords

--- a/en/compression/7Z.md
+++ b/en/compression/7Z.md
@@ -1,5 +1,6 @@
 {
   "date" : "2019-11-17",
+  "keywords" : [ "7z file", "7z file format", "what is a 7z file", "file", "7z example", "7z file extension","extension", "format" ],
   "author" : {
     "display_name" : "xwiki:XWiki.farooqsheikh"
   },
