Updated after adding keywords

--- a/en/gis/e00.md
+++ b/en/gis/e00.md
@@ -1,5 +1,6 @@
 {
   "date" : "2019-10-11",
+  "keywords" : [ "E00 file", "what is an E00 file", "file", "E00 example", "E00 file extension","extension", "format" ],
   "author" : {
     "display_name" : "Kashif Iqbal"
   },
