--- a/en/gis/000.md
+++ b/en/gis/000.md
@@ -1,5 +1,6 @@
 {
   "date" : "2019-10-11",
+  "keywords" : [ "s57 file", "what is an s57 file", "file", "s57 example", "s57 file extension","extension", "format" ],
   "author" : {
     "display_name" : "Kashif Iqbal"
   },
