--- a/en/3d/e57.md
+++ b/en/3d/e57.md
@@ -1,5 +1,6 @@
 {
   "date" : "2021-02-01",
+  "keywords" : [ "e57 file", "e57 file format", "what is an e57 file", "file", "e57 example", "e57 file extension","extension", "format" ],
   "author" : {
     "display_name" : "Kashif Iqbal"
   },
