--- a/en/3d/3D2.md
+++ b/en/3d/3D2.md
@@ -1,5 +1,6 @@
 {
   "date" : "2019-10-11",
+  "keywords" : [ "3d2 file", "3d2 file format", "what is an 3d2 file", "file", "3d2 example", "3d2 file extension","extension", "format" ],
   "author" : {
     "display_name" : "Kashif Iqbal"
   },
