--- a/en/audio/rf64.md
+++ b/en/audio/rf64.md
@@ -53,4 +53,4 @@ Additional chunks defined by RF64 files include:
 
 ## References ##
 
-* [8SVX - By Wikipedia](https://en.wikipedia.org/wiki/8SVX)
+* [RF64 - By Wikipedia](https://en.wikipedia.org/wiki/RF64)
