--- a/en/audio/rf64.md
+++ b/en/audio/rf64.md
@@ -43,13 +43,13 @@ A new 'ds64' chunk is immediately inserted (before the FMT chunk), after the 32-
 
 Additional chunks defined by RF64 files include:
 
-- *BW64* - Replacing "RIFF"
-- *ds64* - 64-bit data size, first chunk under BW64
-- *axml* - Replaced by BW64
-- *bxml* - Similar to "axml" in BWF (ITU-R BS.1352-3), but it is compressed
-- *sxml* - XML data related to sound
-- *chna* - Info of the channel
-- *JUNK* - ds64 placeholder
+- **BW64** - Replacing "RIFF"
+- **ds64** - 64-bit data size, first chunk under BW64
+- **axml** - Replaced by BW64
+- **bxml** - Similar to "axml" in BWF (ITU-R BS.1352-3), but it is compressed
+- **sxml** - XML data related to sound
+- **chna** - Info of the channel
+- **JUNK** - ds64 placeholder
 
 ## References ##
 
