--- a/en/audio/rf64.md
+++ b/en/audio/rf64.md
@@ -19,7 +19,7 @@
 
 ## What is an RF64 file? ##
 
-In a standard WAV file format, there are two extensions. The first is the RF64 extension. In Winamp, this format is called RIFF64 broadcast wave. Winamp is a multimedia playback software for Microsoft Windows. The RF64 store's audio data in RIFF64 in broadcast wave format. Being a multichannel audio file format the RF64 is primarily designed to remove size restrictions on other file formats allowing users to store files over  4GB. This file format add metadata to the sound data to enable its exchange between platforms and applications.
+The RF64 format has a maximum file size of 4 GB and is compatible with BWF. In Winamp, this format is called RIFF64 broadcast wave. Winamp is a multimedia playback software for Microsoft Windows. The RF64 store's audio data in RIFF64 in broadcast wave format. Being a multichannel audio file format the RF64 is primarily designed to remove size restrictions on other file formats allowing users to store files over 4GB. This file format add metadata to the sound data to enable its exchange between platforms and applications.
 
 Moreover, RF64 is an open format allowing users to broadcast large files, document their activities, and supports timecode to enable synchronization with other recordings. Using the RF64 extension you can easily create Broadcast Wave Files which will contain the “bext” chunk from the BWF specification
 
