--- a/en/misc/h5.md
+++ b/en/misc/h5.md
@@ -8,7 +8,7 @@
   "toc" : true,
   "title" : "H5 File - Hierarchical Data Format 5 File",
   "description":"Learn about H5 file and APIs that can create and open MD5 files.",
-  "linktitle" : "MD5",
+  "linktitle" : "H5",
   "menu" : {
     "docs" : {
       "parent" : "misc"
