--- a/ar/game/u8.ar.md
+++ b/ar/game/u8.ar.md
@@ -23,7 +23,7 @@
 
 ## تنسيق ملف U8 - مزيد من المعلومات
 
-ملفات U8 هي ملفات أرشيفية يتم ضغطها باستخدام ملف YAZ0 لتصغير حجم الملف. [نظام ملفات U8](http://wiki.tockdom.com/wiki/U8_ (File_Format)) يتكون من قائمة بالعقد مع كل عقدة تتكون من 12 بايت كما هو موضح أدناه.
+ملفات U8 هي ملفات أرشيفية يتم ضغطها باستخدام ملف YAZ0 لتصغير حجم الملف. [نظام ملفات U8](https://wiki.tockdom.com/wiki/U8_(File_Format)) يتكون من قائمة بالعقد مع كل عقدة تتكون من 12 بايت كما هو موضح أدناه.
 
 | الإزاحة | النوع | الوصف |
 ---|---|---|
@@ -46,5 +46,5 @@
 
 ## مراجع
 
-* [تنسيق ملف Mario Kit Wii U8](http://wiki.tockdom.com/wiki/U8_ (File_Format))
+* [تنسيق ملف Mario Kit Wii U8](https://wiki.tockdom.com/wiki/U8_(File_Format))
 
