--- a/bg/game/u8.bg.md
+++ b/bg/game/u8.bg.md
@@ -23,7 +23,7 @@
 
 ## U8 файлов формат - повече информация
 
-U8 файловете са архивни файлове, които са компресирани с помощта на файла YAZ0, за да се намали размерът на файла. [Файловата система U8](http://wiki.tockdom.com/wiki/U8_(File_Format)) се състои от списък с възли, като всеки възел се състои от 12 байта, както е показано по-долу.
+U8 файловете са архивни файлове, които са компресирани с помощта на файла YAZ0, за да се намали размерът на файла. [Файловата система U8](https://wiki.tockdom.com/wiki/U8_(File_Format)) се състои от списък с възли, като всеки възел се състои от 12 байта, както е показано по-долу.
 
 |Отместване|Тип|Описание|
 ---|---|---|
@@ -46,5 +46,5 @@ U8 файловете са архивни файлове, които са ком
 
 ## Препратки
 
-* [Марио Kit Wii U8 файлов формат](http://wiki.tockdom.com/wiki/U8_(File_Format))
+* [Марио Kit Wii U8 файлов формат](https://wiki.tockdom.com/wiki/U8_(File_Format))
 
