--- a/de/game/u8.de.md
+++ b/de/game/u8.de.md
@@ -23,7 +23,7 @@ Eine Datei mit der Erweiterung .u8 ist eine Archivdatei, die vom Spiel Mario Kar
 
 ## U8-Dateiformat - Weitere Informationen
 
-U8-Dateien sind Archivdateien, die mit der YAZ0-Datei komprimiert werden, um die Dateigröße zu verringern. [U8-Dateisystem](http://wiki.tockdom.com/wiki/U8_(File_Format)) besteht aus einer Liste von Knoten, wobei jeder Knoten aus 12 Bytes besteht, wie unten gezeigt.
+U8-Dateien sind Archivdateien, die mit der YAZ0-Datei komprimiert werden, um die Dateigröße zu verringern. [U8-Dateisystem](https://wiki.tockdom.com/wiki/U8_(File_Format)) besteht aus einer Liste von Knoten, wobei jeder Knoten aus 12 Bytes besteht, wie unten gezeigt.
 
 |Offset|Typ|Beschreibung|
 ---|---|---|
@@ -46,5 +46,5 @@ Der U8-Dateiheader ist 32 Byte lang, wobei alle Werte als Big-Endian-Werte gespe
 
 ## Verweise
 
-* [Mario Kit Wii U8-Dateiformat](http://wiki.tockdom.com/wiki/U8_(Dateiformat))
+* [Mario Kit Wii U8-Dateiformat](https://wiki.tockdom.com/wiki/U8_(File_Format))
 
