--- a/el/game/u8.el.md
+++ b/el/game/u8.el.md
@@ -23,7 +23,7 @@
 
 ## Μορφή αρχείου U8 - Περισσότερες πληροφορίες
 
-Τα αρχεία U8 είναι αρχεία αρχειοθέτησης που συμπιέζονται χρησιμοποιώντας το αρχείο YAZ0 για να μειώσουν το μέγεθος του αρχείου. Το [σύστημα αρχείων U8](http://wiki.tockdom.com/wiki/U8_(File_Format)) αποτελείται από μια λίστα κόμβων με κάθε κόμβο να αποτελείται από 12 byte όπως φαίνεται παρακάτω.
+Τα αρχεία U8 είναι αρχεία αρχειοθέτησης που συμπιέζονται χρησιμοποιώντας το αρχείο YAZ0 για να μειώσουν το μέγεθος του αρχείου. Το [σύστημα αρχείων U8](https://wiki.tockdom.com/wiki/U8_(File_Format)) αποτελείται από μια λίστα κόμβων με κάθε κόμβο να αποτελείται από 12 byte όπως φαίνεται παρακάτω.
 
 |Μετατόπιση|Τύπος|Περιγραφή|
 ---|---|---|
@@ -46,5 +46,5 @@
 
 ## βιβλιογραφικές αναφορές
 
-* [Μορφή αρχείου Mario Kit Wii U8](http://wiki.tockdom.com/wiki/U8_(File_Format))
+* [Μορφή αρχείου Mario Kit Wii U8](https://wiki.tockdom.com/wiki/U8_(File_Format))
 
