--- a/en/game/u8.md
+++ b/en/game/u8.md
@@ -23,7 +23,7 @@ A file with .u8 extension is an archive file used by Mario Kart Wii game. It con
 
 ## U8 File Format - More Information
 
-U8 files are archive files that are compressed using the YAZ0 file to make the file size smaller. [U8 file system](http://wiki.tockdom.com/wiki/U8_(File_Format)) consists of a list of nodes with each node comprising of 12 bytes as shown below.
+U8 files are archive files that are compressed using the YAZ0 file to make the file size smaller. [U8 file system](https://wiki.tockdom.com/wiki/U8_(File_Format)) consists of a list of nodes with each node comprising of 12 bytes as shown below.
 
 |Offset|Type|Description|
 ---|---|---|
@@ -46,4 +46,4 @@ U8 file header is 32 bytes long, with all values stored as big endian values.
 
 ## References
 
- * [Mario Kit Wii U8 File Format](http://wiki.tockdom.com/wiki/U8_(File_Format))
+ * [Mario Kit Wii U8 File Format](https://wiki.tockdom.com/wiki/U8_(File_Format))
