--- a/es/game/u8.es.md
+++ b/es/game/u8.es.md
@@ -23,7 +23,7 @@ Un archivo con extensión .u8 es un archivo de almacenamiento utilizado por el j
 
 ## Formato de archivo U8 - Más información
 
-Los archivos U8 son archivos comprimidos que se comprimen con el archivo YAZ0 para reducir el tamaño del archivo. [Sistema de archivos U8](http://wiki.tockdom.com/wiki/U8_(File_Format)) consiste en una lista de nodos con cada nodo compuesto por 12 bytes como se muestra a continuación.
+Los archivos U8 son archivos comprimidos que se comprimen con el archivo YAZ0 para reducir el tamaño del archivo. [Sistema de archivos U8](https://wiki.tockdom.com/wiki/U8_(File_Format)) consiste en una lista de nodos con cada nodo compuesto por 12 bytes como se muestra a continuación.
 
 |Compensación|Tipo|Descripción|
 ---|---|---|
@@ -46,5 +46,5 @@ El encabezado del archivo U8 tiene una longitud de 32 bytes, con todos los valor
 
 ## Referencias
 
-* [Formato de archivo de Mario Kit Wii U8](http://wiki.tockdom.com/wiki/U8_(File_Format))
+* [Formato de archivo de Mario Kit Wii U8](https://wiki.tockdom.com/wiki/U8_(File_Format))
 
