--- a/he/game/u8.he.md
+++ b/he/game/u8.he.md
@@ -23,7 +23,7 @@
 
 ## פורמט קובץ U8 - מידע נוסף
 
-קבצי U8 הם קבצי ארכיון שנדחסים באמצעות קובץ YAZ0 כדי להקטין את גודל הקובץ. [מערכת קבצים U8](http://wiki.tockdom.com/wiki/U8_(File_Format)) מורכבת מרשימה של צמתים כאשר כל צומת מורכב מ-12 בתים כפי שמוצג להלן.
+קבצי U8 הם קבצי ארכיון שנדחסים באמצעות קובץ YAZ0 כדי להקטין את גודל הקובץ. [מערכת קבצים U8](https://wiki.tockdom.com/wiki/U8_(File_Format)) מורכבת מרשימה של צמתים כאשר כל צומת מורכב מ-12 בתים כפי שמוצג להלן.
 
 |היסט|סוג|תיאור|
 ---|---|---|
@@ -46,5 +46,5 @@
 
 ## הפניות
 
-* [פורמט קובץ Mario Kit Wii U8](http://wiki.tockdom.com/wiki/U8_(File_Format))
+* [פורמט קובץ Mario Kit Wii U8](https://wiki.tockdom.com/wiki/U8_(File_Format))
 
