--- a/id/game/u8.id.md
+++ b/id/game/u8.id.md
@@ -23,7 +23,7 @@ File dengan ekstensi .u8 adalah file arsip yang digunakan oleh game Mario Kart W
 
 ## Format File U8 - Informasi Lebih Lanjut
 
-File U8 adalah file arsip yang dikompres menggunakan file YAZ0 untuk memperkecil ukuran file. [Sistem file U8](http://wiki.tockdom.com/wiki/U8_(File_Format)) terdiri dari daftar node dengan setiap node terdiri dari 12 byte seperti yang ditunjukkan di bawah ini.
+File U8 adalah file arsip yang dikompres menggunakan file YAZ0 untuk memperkecil ukuran file. [Sistem file U8](https://wiki.tockdom.com/wiki/U8_(File_Format)) terdiri dari daftar node dengan setiap node terdiri dari 12 byte seperti yang ditunjukkan di bawah ini.
 
 |Offset|Jenis|Deskripsi|
 ---|---|---|
@@ -46,5 +46,5 @@ Header file U8 panjangnya 32 byte, dengan semua nilai disimpan sebagai nilai end
 
 ## Referensi
 
-* [Format File Mario Kit Wii U8](http://wiki.tockdom.com/wiki/U8_(File_Format))
+* [Format File Mario Kit Wii U8](https://wiki.tockdom.com/wiki/U8_(File_Format))
 
