--- a/it/game/u8.it.md
+++ b/it/game/u8.it.md
@@ -23,7 +23,7 @@ Un file con estensione .u8 è un file di archivio utilizzato dal gioco Mario Kar
 
 ## Formato file U8 - Ulteriori informazioni
 
-I file U8 sono file di archivio compressi utilizzando il file YAZ0 per ridurre le dimensioni del file. [File system U8](http://wiki.tockdom.com/wiki/U8_(File_Format)) consiste in un elenco di nodi con ciascun nodo composto da 12 byte come mostrato di seguito.
+I file U8 sono file di archivio compressi utilizzando il file YAZ0 per ridurre le dimensioni del file. [File system U8](https://wiki.tockdom.com/wiki/U8_(File_Format)) consiste in un elenco di nodi con ciascun nodo composto da 12 byte come mostrato di seguito.
 
 |Offset|Tipo|Descrizione|
 ---|---|---|
@@ -46,5 +46,5 @@ L'intestazione del file U8 è lunga 32 byte, con tutti i valori memorizzati come
 
 ## Riferimenti
 
-* [Formato file Mario Kit Wii U8](http://wiki.tockdom.com/wiki/U8_(File_Format))
+* [Formato file Mario Kit Wii U8](https://wiki.tockdom.com/wiki/U8_(File_Format))
 
