--- a/ja/game/u8.ja.md
+++ b/ja/game/u8.ja.md
@@ -23,7 +23,7 @@
 
 ## U8 ファイル形式 - 詳細情報
 
-U8 ファイルは、ファイル サイズを小さくするために YAZ0 ファイルを使用して圧縮されたアーカイブ ファイルです。 [U8 ファイル システム](http://wiki.tockdom.com/wiki/U8_(File_Format)) は、以下に示すように、各ノードが 12 バイトで構成されるノードのリストで構成されます。
+U8 ファイルは、ファイル サイズを小さくするために YAZ0 ファイルを使用して圧縮されたアーカイブ ファイルです。 [U8 ファイル システム](https://wiki.tockdom.com/wiki/U8_(File_Format)) は、以下に示すように、各ノードが 12 バイトで構成されるノードのリストで構成されます。
 
 |オフセット|タイプ|説明|
 ---|---|---|
@@ -46,5 +46,5 @@ U8 ファイル ヘッダーの長さは 32 バイトで、すべての値がビ
 
 ## 参考文献
 
-* [マリオキット Wii U8 ファイル形式](http://wiki.tockdom.com/wiki/U8_(File_Format))
+* [マリオキット Wii U8 ファイル形式](https://wiki.tockdom.com/wiki/U8_(File_Format))
 
