--- a/nl/game/u8.nl.md
+++ b/nl/game/u8.nl.md
@@ -23,7 +23,7 @@ Een bestand met de extensie .u8 is een archiefbestand dat wordt gebruikt door he
 
 ## U8-bestandsindeling - Meer informatie
 
-U8-bestanden zijn archiefbestanden die zijn gecomprimeerd met het YAZ0-bestand om de bestandsgrootte kleiner te maken. [U8-bestandssysteem](http://wiki.tockdom.com/wiki/U8_(File_Format)) bestaat uit een lijst met knooppunten waarbij elk knooppunt uit 12 bytes bestaat, zoals hieronder wordt weergegeven.
+U8-bestanden zijn archiefbestanden die zijn gecomprimeerd met het YAZ0-bestand om de bestandsgrootte kleiner te maken. [U8-bestandssysteem](https://wiki.tockdom.com/wiki/U8_(File_Format)) bestaat uit een lijst met knooppunten waarbij elk knooppunt uit 12 bytes bestaat, zoals hieronder wordt weergegeven.
 
 |Offset|Type|Beschrijving|
 ---|---|---|
@@ -46,5 +46,5 @@ U8-bestandsheader is 32 bytes lang, waarbij alle waarden zijn opgeslagen als big
 
 ## Referenties
 
-* [Mario Kit Wii U8-bestandsindeling](http://wiki.tockdom.com/wiki/U8_(File_Format))
+* [Mario Kit Wii U8-bestandsindeling](https://wiki.tockdom.com/wiki/U8_(File_Format))
 
