--- a/pl/game/u8.pl.md
+++ b/pl/game/u8.pl.md
@@ -23,7 +23,7 @@ Plik z rozszerzeniem .u8 to plik archiwum używany przez grę Mario Kart Wii. Za
 
 ## Format pliku U8 — więcej informacji
 
-Pliki U8 to pliki archiwów, które są kompresowane przy użyciu pliku YAZ0, aby zmniejszyć rozmiar pliku. [System plików U8](http://wiki.tockdom.com/wiki/U8_(File_Format)) składa się z listy węzłów, z których każdy zawiera 12 bajtów, jak pokazano poniżej.
+Pliki U8 to pliki archiwów, które są kompresowane przy użyciu pliku YAZ0, aby zmniejszyć rozmiar pliku. [System plików U8](https://wiki.tockdom.com/wiki/U8_(File_Format)) składa się z listy węzłów, z których każdy zawiera 12 bajtów, jak pokazano poniżej.
 
 |Przesunięcie|Typ|Opis|
 ---|---|---|
@@ -46,5 +46,5 @@ Nagłówek pliku U8 ma długość 32 bajtów, a wszystkie wartości są przechow
 
 ## Bibliografia
 
-* [Format pliku Mario Kit Wii U8](http://wiki.tockdom.com/wiki/U8_(File_Format))
+* [Format pliku Mario Kit Wii U8](https://wiki.tockdom.com/wiki/U8_(File_Format))
 
