--- a/pt/game/u8.pt.md
+++ b/pt/game/u8.pt.md
@@ -23,7 +23,7 @@ Um arquivo com extensão .u8 é um arquivo usado pelo jogo Mario Kart Wii. Ele c
 
 ## Formato de arquivo U8 - Mais informações
 
-Os arquivos U8 são arquivos compactados usando o arquivo YAZ0 para diminuir o tamanho do arquivo. [Sistema de arquivos U8](http://wiki.tockdom.com/wiki/U8_(File_Format)) consiste em uma lista de nós com cada nó composto por 12 bytes, conforme mostrado abaixo.
+Os arquivos U8 são arquivos compactados usando o arquivo YAZ0 para diminuir o tamanho do arquivo. [Sistema de arquivos U8](https://wiki.tockdom.com/wiki/U8_(File_Format)) consiste em uma lista de nós com cada nó composto por 12 bytes, conforme mostrado abaixo.
 
 |Deslocamento|Tipo|Descrição|
 ---|---|---|
@@ -46,5 +46,5 @@ O cabeçalho do arquivo U8 tem 32 bytes de comprimento, com todos os valores arm
 
 ## Referências
 
-* [Formato de arquivo Mario Kit Wii U8](http://wiki.tockdom.com/wiki/U8_(File_Format))
+* [Formato de arquivo Mario Kit Wii U8](https://wiki.tockdom.com/wiki/U8_(File_Format))
 
