--- a/ro/game/u8.ro.md
+++ b/ro/game/u8.ro.md
@@ -23,7 +23,7 @@ Un fișier cu extensia .u8 este un fișier de arhivă folosit de jocul Mario Kar
 
 ## Format de fișier U8 - Mai multe informații
 
-Fișierele U8 sunt fișiere de arhivă care sunt comprimate folosind fișierul YAZ0 pentru a micșora dimensiunea fișierului. [Sistemul de fișiere U8](http://wiki.tockdom.com/wiki/U8_(File_Format)) constă dintr-o listă de noduri, fiecare nod cuprinzând 12 octeți, așa cum se arată mai jos.
+Fișierele U8 sunt fișiere de arhivă care sunt comprimate folosind fișierul YAZ0 pentru a micșora dimensiunea fișierului. [Sistemul de fișiere U8](https://wiki.tockdom.com/wiki/U8_(File_Format)) constă dintr-o listă de noduri, fiecare nod cuprinzând 12 octeți, așa cum se arată mai jos.
 
 |Offset|Tip|Descriere|
 ---|---|---|
@@ -46,5 +46,5 @@ Antetul fișierului U8 are 32 de octeți, cu toate valorile stocate ca valori bi
 
 ## Referințe
 
-* [Format de fișier Mario Kit Wii U8](http://wiki.tockdom.com/wiki/U8_(File_Format))
+* [Format de fișier Mario Kit Wii U8](https://wiki.tockdom.com/wiki/U8_(File_Format))
 
