--- a/ru/game/u8.ru.md
+++ b/ru/game/u8.ru.md
@@ -23,7 +23,7 @@
 
 ## Формат файла U8 — дополнительная информация
 
-Файлы U8 представляют собой архивные файлы, сжатые с использованием файла YAZ0 для уменьшения размера файла. [Файловая система U8](http://wiki.tockdom.com/wiki/U8_(File_Format)) состоит из списка узлов, каждый из которых состоит из 12 байтов, как показано ниже.
+Файлы U8 представляют собой архивные файлы, сжатые с использованием файла YAZ0 для уменьшения размера файла. [Файловая система U8](https://wiki.tockdom.com/wiki/U8_(File_Format)) состоит из списка узлов, каждый из которых состоит из 12 байтов, как показано ниже.
 
 |Смещение|Тип|Описание|
 ---|---|---|
@@ -46,5 +46,5 @@
 
 ## использованная литература
 
-* [Формат файла Mario Kit Wii U8](http://wiki.tockdom.com/wiki/U8_(File_Format))
+* [Формат файла Mario Kit Wii U8](https://wiki.tockdom.com/wiki/U8_(File_Format))
 
