--- a/sv/game/u8.sv.md
+++ b/sv/game/u8.sv.md
@@ -23,7 +23,7 @@ En fil med filtillägget .u8 är en arkivfil som används av Mario Kart Wii-spel
 
 ## U8-filformat - Mer information
 
-U8-filer är arkivfiler som komprimeras med YAZ0-filen för att göra filstorleken mindre. [U8 filsystem](http://wiki.tockdom.com/wiki/U8_(File_Format)) består av en lista med noder där varje nod består av 12 byte som visas nedan.
+U8-filer är arkivfiler som komprimeras med YAZ0-filen för att göra filstorleken mindre. [U8 filsystem](https://wiki.tockdom.com/wiki/U8_(File_Format)) består av en lista med noder där varje nod består av 12 byte som visas nedan.
 
 |Offset|Typ|Beskrivning|
 ---|---|---|
@@ -46,5 +46,5 @@ U8-filhuvudet är 32 byte långt, med alla värden lagrade som stora endian-vär
 
 ## Referenser
 
-* [Mario Kit Wii U8 filformat](http://wiki.tockdom.com/wiki/U8_(File_Format))
+* [Mario Kit Wii U8 filformat](https://wiki.tockdom.com/wiki/U8_(File_Format))
 
