--- a/th/game/u8.th.md
+++ b/th/game/u8.th.md
@@ -23,7 +23,7 @@
 
 ## รูปแบบไฟล์ U8 - ข้อมูลเพิ่มเติม
 
-ไฟล์ U8 เป็นไฟล์เก็บถาวรที่บีบอัดโดยใช้ไฟล์ YAZ0 เพื่อทำให้ขนาดไฟล์เล็กลง [ระบบไฟล์ U8](http://wiki.tockdom.com/wiki/U8_(File_Format)) ประกอบด้วยรายการโหนดโดยแต่ละโหนดประกอบด้วย 12 ไบต์ดังที่แสดงด้านล่าง
+ไฟล์ U8 เป็นไฟล์เก็บถาวรที่บีบอัดโดยใช้ไฟล์ YAZ0 เพื่อทำให้ขนาดไฟล์เล็กลง [ระบบไฟล์ U8](https://wiki.tockdom.com/wiki/U8_(File_Format)) ประกอบด้วยรายการโหนดโดยแต่ละโหนดประกอบด้วย 12 ไบต์ดังที่แสดงด้านล่าง
 
 |ออฟเซ็ต|ประเภท|รายละเอียด|
 ---|---|---|
@@ -46,5 +46,5 @@
 
 ## อ้างอิง
 
-* [รูปแบบไฟล์ Mario Kit Wii U8](http://wiki.tockdom.com/wiki/U8_(File_Format))
+* [รูปแบบไฟล์ Mario Kit Wii U8](https://wiki.tockdom.com/wiki/U8_(File_Format))
 
