--- a/tr/game/u8.tr.md
+++ b/tr/game/u8.tr.md
@@ -23,7 +23,7 @@
 
 ## U8 Dosya Biçimi - Daha Fazla Bilgi
 
-U8 dosyaları, dosya boyutunu küçültmek için YAZ0 dosyası kullanılarak sıkıştırılan arşiv dosyalarıdır. [U8 dosya sistemi](http://wiki.tockdom.com/wiki/U8_(File_Format)) aşağıda gösterildiği gibi her düğümün 12 bayttan oluştuğu bir düğüm listesinden oluşur.
+U8 dosyaları, dosya boyutunu küçültmek için YAZ0 dosyası kullanılarak sıkıştırılan arşiv dosyalarıdır. [U8 dosya sistemi](https://wiki.tockdom.com/wiki/U8_(File_Format)) aşağıda gösterildiği gibi her düğümün 12 bayttan oluştuğu bir düğüm listesinden oluşur.
 
 |Ofset|Tip|Açıklama|
 ---|---|---|
@@ -46,5 +46,5 @@ U8 dosya başlığı 32 bayt uzunluğundadır ve tüm değerler büyük endian d
 
 ## Referanslar
 
-* [Mario Kit Wii U8 Dosya Biçimi](http://wiki.tockdom.com/wiki/U8_(File_Format))
+* [Mario Kit Wii U8 Dosya Biçimi](https://wiki.tockdom.com/wiki/U8_(File_Format))
 
