--- a/uk/game/u8.uk.md
+++ b/uk/game/u8.uk.md
@@ -23,7 +23,7 @@
 
 ## Формат файлу U8 - Додаткова інформація
 
-Файли U8 – це архівні файли, які стискаються за допомогою файлу YAZ0, щоб зменшити розмір файлу. [Файлова система U8](http://wiki.tockdom.com/wiki/U8_(File_Format)) складається зі списку вузлів, кожен з яких складається з 12 байтів, як показано нижче.
+Файли U8 – це архівні файли, які стискаються за допомогою файлу YAZ0, щоб зменшити розмір файлу. [Файлова система U8](https://wiki.tockdom.com/wiki/U8_(File_Format)) складається зі списку вузлів, кожен з яких складається з 12 байтів, як показано нижче.
 
 |Зсув|Тип|Опис|
 ---|---|---|
@@ -46,5 +46,5 @@
 
 ## Список літератури
 
-* [Формат файлу Mario Kit Wii U8](http://wiki.tockdom.com/wiki/U8_(File_Format))
+* [Формат файлу Mario Kit Wii U8](https://wiki.tockdom.com/wiki/U8_(File_Format))
 
