--- a/vi/game/u8.vi.md
+++ b/vi/game/u8.vi.md
@@ -23,7 +23,7 @@ Tệp có phần mở rộng .u8 là tệp lưu trữ được trò chơi Mario 
 
 ## Định dạng tệp U8 - Thông tin khác
 
-Các tệp U8 là các tệp lưu trữ được nén bằng tệp YAZ0 để làm cho kích thước tệp nhỏ hơn. [Hệ thống tệp U8](http://wiki.tockdom.com/wiki/U8_(File_Format)) bao gồm một danh sách các nút với mỗi nút bao gồm 12 byte như hình bên dưới.
+Các tệp U8 là các tệp lưu trữ được nén bằng tệp YAZ0 để làm cho kích thước tệp nhỏ hơn. [Hệ thống tệp U8](https://wiki.tockdom.com/wiki/U8_(File_Format)) bao gồm một danh sách các nút với mỗi nút bao gồm 12 byte như hình bên dưới.
 
 |Độ lệch|Loại|Mô tả|
 ---|---|---|
@@ -46,5 +46,5 @@ Tiêu đề tệp U8 dài 32 byte, với tất cả các giá trị được lư
 
 ## Người giới thiệu
 
-* [Định dạng tệp Mario Kit Wii U8](http://wiki.tockdom.com/wiki/U8_(File_Format))
+* [Định dạng tệp Mario Kit Wii U8](https://wiki.tockdom.com/wiki/U8_(File_Format))
 
