--- a/zh/game/u8.zh.md
+++ b/zh/game/u8.zh.md
@@ -23,7 +23,7 @@
 
 ## U8 文件格式 - 更多信息
 
-U8 文件是使用 YAZ0 文件压缩的存档文件，以使文件大小更小。 [U8 文件系统](http://wiki.tockdom.com/wiki/U8_(File_Format)) 由节点列表组成，每个节点由 12 个字节组成，如下所示。
+U8 文件是使用 YAZ0 文件压缩的存档文件，以使文件大小更小。 [U8 文件系统](https://wiki.tockdom.com/wiki/U8_(File_Format)) 由节点列表组成，每个节点由 12 个字节组成，如下所示。
 
 |偏置|类型|描述|
 ---|---|---|
@@ -46,5 +46,5 @@ U8 文件头长 32 个字节，所有值都存储为大端值。
 
 ## 参考
 
-* [Mario Kit Wii U8 文件格式](http://wiki.tockdom.com/wiki/U8_(File_Format))
+* [Mario Kit Wii U8 文件格式](https://wiki.tockdom.com/wiki/U8_(File_Format))
 
